# meshup-core

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/api/: mod.rs  transport.rs  unsafe_world.rs
src/binding/: events.rs  mod.rs  transport.rs
src/core/: bvh.rs  dim3.rs  editor.rs  editor_plugin.rs  fps.rs  gizmos.rs  grid.rs  grid.wgsl  grid_plugin.rs  highlight.rs  interaction.rs  mesh.rs  mod.rs  pan_orbit_camera.rs  pan_orbit_camera_plugin.rs
src/core/editable_mesh/: bvh.rs  mod.rs
src/core/tools/: brush.rs  general.rs  mod.rs
src/utils/: mod.rs  multiples.rs  projection.rs  quartic.rs
