[package]
name = "meshup-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type= ["cdylib"]

#bevy = {version = "0.13.2", default-features=false, features = ["animation", "bevy_asset", "bevy_scene", "bevy_winit", "bevy_core_pipeline", "bevy_pbr", "bevy_gltf", "bevy_render", "bevy_sprite", "bevy_text", "bevy_ui", "png", "hdr", "vorbis", "x11", "bevy_gizmos", "android_shared_stdcxx", "tonemapping_luts", "default_font", "webgpu"]}
[dependencies]
bevy = {version = "0.13.2", default-features=false, features = ["animation", "bevy_asset", "bevy_scene", "bevy_winit", "bevy_core_pipeline", "bevy_pbr", "bevy_gltf", "bevy_render", "bevy_sprite", "bevy_text", "bevy_ui", "png", "hdr", "vorbis", "x11", "bevy_gizmos", "android_shared_stdcxx", "tonemapping_luts", "default_font", "webgpu"]}
lox = "0.1.1"
wasm-bindgen = "0.2.92"
